--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
+  <h1>Simple Blog</h1>
+  <h2>Add a new blog Post</h2>
+  <form id="blogForm">
 
+    <label for="title">Blog bost title</label>
+    <br>
+    <input type="text" name="title" id="title">
+    <br>
+    <label for="title">Blog bost title</label>
+    <br>
+    <textarea name="body" id="body"></textarea>
+    <br>
+    <input type="submit" value="add blog post">
+  </form>
+  <div id="result"></div>
+  <h2>All blog Posts</h2>
+  <main>
+
+  </main>
   <script src="script.js"></script>
 </body>
 
